istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: hlz-app-service
        port:
          number: 80
  - route:
    - destination:
        host: mon-redis
        port:
          number: 6379
